add recursive file listing option
